--- a/tgif.css
+++ b/tgif.css
@@ -62,3 +62,15 @@ header li {
     justify-content: space-between;
     align-items: center;
 }
+.loader {
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:  rgba(255, 255, 255, .8);
+}
