--- a/tgif.css
+++ b/tgif.css
@@ -74,3 +74,18 @@ header li {
     align-items: center;
     background-color:  rgba(255, 255, 255, .8);
 }
+table {
+     table-layout: fixed;
+}
+.flexM {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.alertMessage {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    font-size: 20px;
+}
